# apple-plist

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: date.rs  de.rs  depth.rs  error.rs  format.rs  lib.rs  scalar.rs  ser.rs  uid.rs
src/binary/: generator.rs  mod.rs  parser.rs
src/text/: generator.rs  mod.rs  parser.rs  tables.rs
src/value/: de.rs  integer.rs  mod.rs  real.rs  ser.rs
src/xml/: generator.rs  mod.rs  parser.rs
tests/: custom_serde.rs  depth_limit.rs  invalid.rs  property.rs  roundtrip.rs  serde_struct.rs  smoke.rs
tests/common/: mod.rs
tests/fixtures/corpus/: A map with a blank key.binary.plist  A map with a blank key.openstep.plist  A map with a blank key.xml.plist  A struct containing a pointer to a pointer (etc).gnustep.plist  An array containing more than fifteen items.binary.plist  An array containing more than fifteen items.gnustep.plist  An array containing more than fifteen items.openstep.plist  An array containing more than fifteen items.xml.plist  Arbitrary Byte Data (array).binary.plist  Arbitrary Byte Data (array).xml.plist  Arbitrary Byte Data.gnustep.plist  Arbitrary Byte Data.openstep.plist  Arbitrary Integer Array.binary.plist  Arbitrary Integer Array.gnustep.plist  Arbitrary Integer Array.openstep.plist  Arbitrary Integer Array.xml.plist  Arbitrary Integer Slice.binary.plist  Arbitrary Integer Slice.gnustep.plist  Arbitrary Integer Slice.openstep.plist  Arbitrary Integer Slice.xml.plist  Array of byte arrays.binary.plist  Array of byte arrays.gnustep.plist  Array of byte arrays.xml.plist  Basic Structure with empty omitempty fields.binary.plist  Basic Structure with empty omitempty fields.gnustep.plist  Basic Structure with empty omitempty fields.openstep.plist  Basic Structure with empty omitempty fields.xml.plist  Basic Structure with omitted fields.binary.plist  Basic Structure with omitted fields.openstep.plist  Basic Structure with omitted fields.xml.plist  Boolean True.gnustep.plist  Boolean True.xml.plist  CF Keyed Archiver UID (struct).gnustep.plist  CF Keyed Archiver UID (struct).xml.plist  CF Keyed Archiver UID as Legacy Int.binary.plist  CF Keyed Archiver UID as Legacy Int.openstep.plist  CF Keyed Archiver UIDs (any).binary.plist  CF Keyed Archiver UIDs (any).gnustep.plist  CF Keyed Archiver UIDs (any).openstep.plist  CF Keyed Archiver UIDs (any).xml.plist  (+86 more)
tests/fixtures/invalid/: Bad Extended Character.openstep.plist  Broken GNUStep data.gnustep.plist  Empty GNUStep extended value.gnustep.plist  Empty GNUStep quoted extended value.gnustep.plist  Garbage after end of non-string.openstep.plist  Invalid GNUStep base64 data.gnustep.plist  Invalid GNUStep date.gnustep.plist  Invalid GNUStep int.gnustep.plist  Invalid GNUStep type.gnustep.plist  Invalid data.openstep.plist  Missing Equals in Dictionary.openstep.plist  Missing Semicolon in Dictionary.openstep.plist  Poorly-terminated GNUStep quoted value.gnustep.plist  Truncated GNUStep base64 data (missing ]).gnustep.plist  Truncated GNUStep base64 data (missing _).gnustep.plist  Truncated GNUStep value.gnustep.plist  Truncated array with empty data.openstep.plist  Truncated dictionary.openstep.plist  Truncated nested array.openstep.plist  Truncated octal escape.openstep.plist  Truncated unicode escape.openstep.plist  Unclosed dictionary.openstep.plist  Unclosed nested array.openstep.plist  Unterminated GNUStep quoted value (EOF).gnustep.plist  Unterminated GNUStep quoted value.gnustep.plist  data with invalid base64.xml.plist  date with invalid format.xml.plist  dict with key but no value.xml.plist  dict with string instead of key.xml.plist  empty integer.xml.plist  hex integer with no digits.xml.plist  integer with non-numeric value.xml.plist  invalid-b-00.binary.plist  invalid-b-01.binary.plist  invalid-b-02.binary.plist  invalid-b-03.binary.plist  invalid-b-04.binary.plist  invalid-b-05.binary.plist  invalid-b-06.binary.plist  invalid-b-07.binary.plist  (+33 more)
